--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.3.0",
+    "@types/jest": "^28.1.6",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "jest": "^28.1.3",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.5.4",
     "vite": "^2.9.0"
   }
